@@ -24,7 +24,7 @@ import java.util.Set;
 import java.util.TreeSet;
 
 import org.fenixedu.academic.domain.degreeStructure.ProgramConclusion;
-import org.fenixedu.academic.domain.student.registrationStates.RegistrationStateType;
+import org.fenixedu.academic.domain.student.registrationStates.RegistrationStateTypeEnum;
 import org.fenixedu.bennu.core.domain.Bennu;
 import org.fenixedu.commons.i18n.LocalizedString;
 import org.springframework.stereotype.Service;
@@ -57,7 +57,7 @@ public class ProgramConclusionService {
     @Atomic
     public ProgramConclusion createProgramConclusion(LocalizedString name, LocalizedString description,
             LocalizedString graduationTitle, LocalizedString graduationLevel, boolean isAverageEditable, boolean isAlumniProvider,
-            boolean isSkipValidation, RegistrationStateType targetState) {
+            boolean isSkipValidation, RegistrationStateTypeEnum targetState) {
         return new ProgramConclusion(name, description, graduationTitle, graduationLevel, isAverageEditable, isAlumniProvider,
                 isSkipValidation, targetState);
     }
@@ -65,7 +65,7 @@ public class ProgramConclusionService {
     @Atomic
     public void editProgramConclusion(ProgramConclusion programConclusion, LocalizedString name, LocalizedString description,
             LocalizedString graduationTitle, LocalizedString graduationLevel, boolean isAverageEditable, boolean isAlumniProvider,
-            boolean isSkipValidation, RegistrationStateType targetState) {
+            boolean isSkipValidation, RegistrationStateTypeEnum targetState) {
         programConclusion.edit(name, description, graduationTitle, graduationLevel, isAverageEditable, isAlumniProvider,
                 isSkipValidation, targetState);
     }
